# binance_downloader

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
binance_downloader/: main.py
binance_history_downloader/: __init__.py
